# cosq

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE.md  README.md  TEST_COVERAGE_ANALYSIS.md
.github/workflows/: release.yml
crates/cosq/: Cargo.toml
crates/cosq-cli/: Cargo.toml
crates/cosq-cli/src/: banner.rs
crates/cosq-client/: Cargo.toml
crates/cosq-client/src/: ai.rs  arm.rs  auth.rs  cosmos.rs  error.rs  lib.rs  local_agent.rs  openai.rs
crates/cosq-core/: Cargo.toml
crates/cosq-core/src/: config.rs  lib.rs  stored_query.rs
crates/cosq/src/: cli.rs  main.rs  output.rs  update.rs
crates/cosq/src/commands/: ai.rs  auth.rs  common.rs  completion.rs  init.rs  mod.rs  pipeline.rs  queries.rs  query.rs  run.rs
