[workspace]
resolver = "2"
members = [
    "crates/cosq",
    "crates/cosq-core",
    "crates/cosq-client",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Kristofer Liljeblad <kristofer@mklab.se>"]
license = "MIT"
repository = "https://github.com/mklab-se/cosq"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
cosq-core = { path = "crates/cosq-core" }
cosq-client = { path = "crates/cosq-client" }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# Async
tokio = { version = "1.40", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal
colored = "2.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Versioning & time
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Directories
dirs = "6.0"
