[workspace]
resolver = "2"
members = [
    "crates/cosq",
    "crates/cosq-core",
    "crates/cosq-client",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Kristofer Liljeblad <kristofer@mklab.se>"]
license = "MIT"
repository = "https://github.com/mklab-se/cosq"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
cosq-core = { version = "0.5.0", path = "crates/cosq-core" }
cosq-client = { version = "0.5.0", path = "crates/cosq-client" }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# Async
tokio = { version = "1.40", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal
colored = "2.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Versioning & time
semver = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# URL encoding
urlencoding = "2.1"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Directories
dirs = "6.0"

# Templating
minijinja = "2"

# Table output
comfy-table = "7"

# Regex
regex = "1"
