[package]
name = "cosq-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Azure Cosmos DB client and authentication for cosq"

[dependencies]
cosq-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
urlencoding.workspace = true
uuid.workspace = true
