[package]
name = "cosq-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types and configuration for cosq"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
